# unirapui

./: Cargo.toml  LICENSE  cbindgen.toml
certs/: .gitignore  generate_certs.sh
src/: android.rs  build.rs  index.html  ios.rs  lib.rs  unirapui.rs
src/android/: build.gradle  release.keystore  settings.gradle
src/android/app/: build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/res/values/: strings.xml  themes.xml
src/android/app/src/main/res/values-night/: themes.xml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/android/lib/: build.gradle  consumer-rules.pro
src/android/lib/src/main/: AndroidManifest.xml
src/android/lib/src/main/res/raw/: ca_certificate
src/example/: build.gradle
src/example/app/: build.gradle
src/example/app/src/main/: AndroidManifest.xml
src/example/gradle/wrapper/: gradle-wrapper.properties
src/ios/Unirapui.xcworkspace/: contents.xcworkspacedata
src/ios/Unirapui.xcworkspace/xcuserdata/rikshot.xcuserdatad/: UserInterfaceState.xcuserstate
src/ios/Unirapui.xcworkspace/xcuserdata/rikshot.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/ios/Unirapui/Resources/: ca.crt  client.crt  client.p12
src/ios/Unirapui/Unirapui/: Unirapui.h  Unirapui.swift
src/ios/Unirapui/Unirapui.xcodeproj/: project.pbxproj
src/ios/Unirapui/Unirapui.xcodeproj/xcshareddata/xcschemes/: Resources.xcscheme  Unirapui.xcscheme
src/ios/app/app/: appApp.swift
src/ios/app/app.xcodeproj/: project.pbxproj
src/ios/app/app.xcodeproj/xcshareddata/xcschemes/: app.xcscheme
(+15 files in other folders)
