[package]
name = "unirapui"
version = "0.1.0"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2018"

[dependencies]
jni = "*"
tokio = { version = "*", features = ["full"] }
warp = { version = "*", features = ["tls"] }
log = "*"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "*"

[lib]
crate-type = ["cdylib"]
