[package]
name = "unirapui"
version = "0.1.0"
authors = ["Ville Orkas <ville@orkas.fi>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
tokio = { version = "*", features = ["full"] }
warp = { version = "*", features = ["tls"] }
log = "*"
futures = "*"

[build-dependencies]
cbindgen = "*"

[target.'cfg(target_os = "android")'.dependencies]
jni = "*"
android_logger = "*"

[target.'cfg(target_os = "ios")'.dependencies]
env_logger = "*"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3